--- a/notebooks/td/Temporal_Difference.ipynb
+++ b/notebooks/td/Temporal_Difference.ipynb
@@ -23,6 +23,7 @@
     "colab": {
       "name": "Temporal_Difference.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     }
@@ -35,7 +36,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fernandofsilva/Reinforcement_Learning/blob/main/notebooks/td/Temporal_Difference.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fernandofsilva/RL/blob/main/notebooks/td/Temporal_Difference.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,6 +61,38 @@
     {
       "cell_type": "code",
       "metadata": {
+        "cellView": "form",
+        "id": "0lJ7zNn0AG92"
+      },
+      "source": [
+        "#@title\n",
+        "# Start a Git repository\n",
+        "!git init\n",
+        "\n",
+        "# Track repository, do not enter subdirectory\n",
+        "!git remote add -f origin https://github.com/fernandofsilva/RL\n",
+        "\n",
+        "# Enable the tree check feature\n",
+        "!git config core.sparseCheckout true\n",
+        "\n",
+        "# Create a file in the path: .git/info/sparse-checkout\n",
+        "# That is inside the hidden .git directory that was created\n",
+        "# by running the command: git init\n",
+        "# And inside it enter the name of the sub directory you only want to clone\n",
+        "!echo 'notebooks/td' >> .git/info/sparse-checkout\n",
+        "\n",
+        "## Download with pull, not clone\n",
+        "git pull origin master\n",
+        "\n",
+        "# Move files to root\n",
+        "!mv notebooks/td/*.py ."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "MZA8LfTh-4qT"
       },
       "source": [
@@ -73,7 +106,7 @@
         "import check_test\n",
         "from plot_utils import plot_values"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -93,7 +126,7 @@
       "source": [
         "env = gym.make('CliffWalking-v0')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +168,7 @@
         "print(env.action_space)\n",
         "print(env.observation_space)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +209,7 @@
         "\n",
         "plot_values(V_opt)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -236,7 +269,7 @@
         "    policy_s[np.argmax(Q_s)] = 1 - epsilon + (epsilon / env.nA)\n",
         "    return policy_s"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +334,7 @@
         "    print(('Best Average Reward over %d Episodes: ' % plot_every), np.max(scores))\n",
         "    return Q"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +372,7 @@
         "V_sarsa = ([np.max(Q_sarsa[key]) if key in Q_sarsa else 0 for key in np.arange(48)])\n",
         "plot_values(V_sarsa)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +517,7 @@
         "    print(('Best Average Reward over %d Episodes: ' % plot_every), np.max(scores))\n",
         "    return Q"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +554,7 @@
         "# plot the estimated optimal state-value function\n",
         "plot_values([np.max(Q_sarsamax[key]) if key in Q_sarsamax else 0 for key in np.arange(48)])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,7 +701,7 @@
         "    print(('Best Average Reward over %d Episodes: ' % plot_every), np.max(scores))\n",
         "    return Q"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -705,7 +738,7 @@
         "# plot the estimated optimal state-value function\n",
         "plot_values([np.max(Q_expsarsa[key]) if key in Q_expsarsa else 0 for key in np.arange(48)])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
