--- a/notebooks/mc/Monte_Carlo.ipynb
+++ b/notebooks/mc/Monte_Carlo.ipynb
@@ -35,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fernandofsilva/Reinforcement_Learning/blob/main/notebooks/mc/Monte_Carlo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fernandofsilva/RL/blob/main/notebooks/mc/Monte_Carlo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -58,6 +58,59 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "id": "UFdxmZsBoU5V",
+        "outputId": "680537f7-c97e-4985-e283-7fb8ce392f10"
+      },
+      "source": [
+        "#@title Load custom imports\n",
+        "# Start a Git repository\n",
+        "!git init\n",
+        "\n",
+        "# Track repository, do not enter subdirectory\n",
+        "!git remote add -f origin https://github.com/fernandofsilva/RL\n",
+        "\n",
+        "# Enable the tree check feature\n",
+        "!git config core.sparseCheckout true\n",
+        "\n",
+        "# Create a file in the path: .git/info/sparse-checkout\n",
+        "# That is inside the hidden .git directory that was created\n",
+        "# by running the command: git init\n",
+        "# And inside it enter the name of the sub directory you only want to clone\n",
+        "!echo 'notebooks/mc' >> .git/info/sparse-checkout\n",
+        "\n",
+        "## Download with pull, not clone\n",
+        "!git pull origin main\n",
+        "\n",
+        "# Move files to root\n",
+        "!mv notebooks/mc/*.py ."
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialized empty Git repository in /content/.git/\n",
+            "Updating origin\n",
+            "remote: Enumerating objects: 262, done.\u001b[K\n",
+            "remote: Total 262 (delta 0), reused 0 (delta 0), pack-reused 262\u001b[K\n",
+            "Receiving objects: 100% (262/262), 288.34 MiB | 37.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (117/117), done.\n",
+            "From https://github.com/fernandofsilva/RL\n",
+            " * [new branch]      main       -> origin/main\n",
+            "fatal: Couldn't find remote ref master\n",
+            "mv: cannot stat 'notebooks/mc/*.py': No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "NyLt4VIp_E3L"
       },
       "source": [
@@ -68,7 +121,7 @@
         "\n",
         "from plot_utils import plot_blackjack_values, plot_policy"
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -88,7 +141,7 @@
       "source": [
         "env = gym.make('Blackjack-v0')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +177,7 @@
         "print(env.observation_space)\n",
         "print(env.action_space)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +221,7 @@
         "            print('You won :)\\n') if reward > 0 else print('You lost :(\\n')\n",
         "            break"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +284,7 @@
         "            break\n",
         "    return episode"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +311,7 @@
         "for i in range(3):\n",
         "    print(generate_episode_from_limit_stochastic(env))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +373,7 @@
         "            Q[state][actions[i]] = returns_sum[state][actions[i]] / N[state][actions[i]]\n",
         "    return Q"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -355,7 +408,7 @@
         "# plot the state-value function\n",
         "plot_blackjack_values(V_to_plot)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +492,7 @@
         "        Q[state][actions[i]] = old_Q + alpha*(sum(rewards[i:]*discounts[:-(1+i)]) - old_Q)\n",
         "    return Q"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +522,7 @@
         "    policy = dict((k,np.argmax(v)) for k, v in Q.items())\n",
         "    return policy, Q"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -494,7 +547,7 @@
         "# obtain the estimated optimal policy and action-value function\n",
         "policy, Q = mc_control(env, 500000, 0.02)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +585,7 @@
         "# plot the state-value function\n",
         "plot_blackjack_values(V)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -572,7 +625,7 @@
         "# plot the policy\n",
         "plot_policy(policy)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
