--- a/notebooks/dqn/Deep_Q_Network.ipynb
+++ b/notebooks/dqn/Deep_Q_Network.ipynb
@@ -23,6 +23,7 @@
       "name": "Deep_Q_Network.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -35,7 +36,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fernandofsilva/Reinforcement_Learning/blob/main/notebooks/dqn/Deep_Q_Network.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fernandofsilva/RL/blob/main/notebooks/dqn/Deep_Q_Network.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -57,8 +58,64 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "wzedrJ0Ip_42",
+        "outputId": "07478488-c98b-4959-a054-246a768350b1"
+      },
+      "source": [
+        "#@title load custom imports\n",
+        "\n",
+        "# Start a Git repository\n",
+        "!git init\n",
+        "\n",
+        "# Track repository, do not enter subdirectory\n",
+        "!git remote add -f origin https://github.com/fernandofsilva/RL\n",
+        "\n",
+        "# Enable the tree check feature\n",
+        "!git config core.sparseCheckout true\n",
+        "\n",
+        "# Create a file in the path: .git/info/sparse-checkout\n",
+        "# That is inside the hidden .git directory that was created\n",
+        "# by running the command: git init\n",
+        "# And inside it enter the name of the sub directory you only want to clone\n",
+        "!echo 'notebooks/dqn' >> .git/info/sparse-checkout\n",
+        "\n",
+        "## Download with pull, not clone\n",
+        "!git pull origin main\n",
+        "\n",
+        "# Move files to root\n",
+        "!mv notebooks/dqn/*.py .\n",
+        "!mv notebooks/dqn/*.pth ."
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialized empty Git repository in /content/.git/\n",
+            "Updating origin\n",
+            "remote: Enumerating objects: 5, done.\u001b[K\n",
+            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Total 267 (delta 0), reused 0 (delta 0), pack-reused 262\u001b[K\n",
+            "Receiving objects: 100% (267/267), 288.75 MiB | 31.64 MiB/s, done.\n",
+            "Resolving deltas: 100% (117/117), done.\n",
+            "From https://github.com/fernandofsilva/RL\n",
+            " * [new branch]      main       -> origin/main\n",
+            "From https://github.com/fernandofsilva/RL\n",
+            " * branch            main       -> FETCH_HEAD\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "5P88tpgYMT3T",
-        "outputId": "eb70245e-5421-4fe3-b501-fd34c991a0db"
+        "outputId": "f5953c08-c1f3-4342-baf3-b4fe0fbb5d03"
       },
       "source": [
         "import gym\n",
@@ -82,14 +139,14 @@
         "\n",
         "plt.ion()"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting box2d\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a9/0b/d48d42dd9e19ce83a3fb4eee074e785b6c6ea612a2244dc2ef69427d338b/Box2D-2.3.10-cp36-cp36m-manylinux1_x86_64.whl (1.3MB)\n",
-            "\r\u001b[K     |▎                               | 10kB 3.5MB/s eta 0:00:01\r\u001b[K     |▌                               | 20kB 5.0MB/s eta 0:00:01\r\u001b[K     |▊                               | 30kB 6.3MB/s eta 0:00:01\r\u001b[K     |█                               | 40kB 7.5MB/s eta 0:00:01\r\u001b[K     |█▎                              | 51kB 9.1MB/s eta 0:00:01\r\u001b[K     |█▌                              | 61kB 9.0MB/s eta 0:00:01\r\u001b[K     |█▊                              | 71kB 9.4MB/s eta 0:00:01\r\u001b[K     |██                              | 81kB 10.4MB/s eta 0:00:01\r\u001b[K     |██▎                             | 92kB 10.8MB/s eta 0:00:01\r\u001b[K     |██▌                             | 102kB 11.1MB/s eta 0:00:01\r\u001b[K     |██▊                             | 112kB 11.1MB/s eta 0:00:01\r\u001b[K     |███                             | 122kB 11.1MB/s eta 0:00:01\r\u001b[K     |███▏                            | 133kB 11.1MB/s eta 0:00:01\r\u001b[K     |███▌                            | 143kB 11.1MB/s eta 0:00:01\r\u001b[K     |███▊                            | 153kB 11.1MB/s eta 0:00:01\r\u001b[K     |████                            | 163kB 11.1MB/s eta 0:00:01\r\u001b[K     |████▏                           | 174kB 11.1MB/s eta 0:00:01\r\u001b[K     |████▌                           | 184kB 11.1MB/s eta 0:00:01\r\u001b[K     |████▊                           | 194kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████                           | 204kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 215kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 225kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████▊                          | 235kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████                          | 245kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 256kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████▍                         | 266kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████▊                         | 276kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████                         | 286kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████▏                        | 296kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 307kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████▊                        | 317kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████                        | 327kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 337kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████▍                       | 348kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 358kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████                       | 368kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████▏                      | 378kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 389kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 399kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████                      | 409kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████▏                     | 419kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 430kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████▋                     | 440kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████                     | 450kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 460kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 471kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████▋                    | 481kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████                    | 491kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████▏                   | 501kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 512kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████▋                   | 522kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 532kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████▏                  | 542kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████▍                  | 552kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████▋                  | 563kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████▉                  | 573kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 583kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 593kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 604kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████▉                 | 614kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 624kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████▍                | 634kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 645kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 655kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████                | 665kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 675kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 686kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████▉               | 696kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 706kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 716kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 727kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 737kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 747kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 757kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████▋             | 768kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 778kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 788kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 798kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 808kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 819kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 829kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 839kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 849kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 860kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 870kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 880kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████▌          | 890kB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████▉          | 901kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 911kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 921kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 931kB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 942kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 952kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 962kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 972kB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 983kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 993kB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████▎       | 1.0MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 1.0MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 1.0MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 1.0MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 1.0MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▌      | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▊      | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▎     | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▊    | 1.1MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▊   | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████   | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 1.2MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▌ | 1.3MB 11.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▊ | 1.3MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 1.3MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 1.3MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 1.3MB 11.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▊| 1.3MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.3MB 11.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.3MB 11.1MB/s \n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/22/1b/ce95bb5d1807d4d85af8d0c90050add1a77124459f8097791f0c39136d53/Box2D-2.3.10-cp37-cp37m-manylinux1_x86_64.whl (1.3MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.3MB 8.6MB/s \n",
             "\u001b[?25hInstalling collected packages: box2d\n",
             "Successfully installed box2d-2.3.10\n",
             "Reading package lists... Done\n",
@@ -97,11 +154,11 @@
             "Reading state information... Done\n",
             "The following NEW packages will be installed:\n",
             "  xvfb\n",
-            "0 upgraded, 1 newly installed, 0 to remove and 10 not upgraded.\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 30 not upgraded.\n",
             "Need to get 784 kB of archives.\n",
             "After this operation, 2,270 kB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 xvfb amd64 2:1.19.6-1ubuntu4.8 [784 kB]\n",
-            "Fetched 784 kB in 1s (1,246 kB/s)\n",
+            "Fetched 784 kB in 1s (620 kB/s)\n",
             "debconf: unable to initialize frontend: Dialog\n",
             "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 1.)\n",
             "debconf: falling back to frontend: Readline\n",
@@ -110,17 +167,17 @@
             "debconf: falling back to frontend: Teletype\n",
             "dpkg-preconfigure: unable to re-open stdin: \n",
             "Selecting previously unselected package xvfb.\n",
-            "(Reading database ... 146442 files and directories currently installed.)\n",
+            "(Reading database ... 160980 files and directories currently installed.)\n",
             "Preparing to unpack .../xvfb_2%3a1.19.6-1ubuntu4.8_amd64.deb ...\n",
             "Unpacking xvfb (2:1.19.6-1ubuntu4.8) ...\n",
             "Setting up xvfb (2:1.19.6-1ubuntu4.8) ...\n",
             "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
             "Collecting pyvirtualdisplay\n",
-            "  Downloading https://files.pythonhosted.org/packages/ad/05/6568620fed440941b704664b9cfe5f836ad699ac7694745e7787fbdc8063/PyVirtualDisplay-2.0-py2.py3-none-any.whl\n",
+            "  Downloading https://files.pythonhosted.org/packages/19/88/7a198a5ee3baa3d547f5a49574cd8c3913b216f5276b690b028f89ffb325/PyVirtualDisplay-2.1-py3-none-any.whl\n",
             "Collecting EasyProcess\n",
             "  Downloading https://files.pythonhosted.org/packages/48/3c/75573613641c90c6d094059ac28adb748560d99bd27ee6f80cce398f404e/EasyProcess-0.3-py2.py3-none-any.whl\n",
             "Installing collected packages: EasyProcess, pyvirtualdisplay\n",
-            "Successfully installed EasyProcess-0.3 pyvirtualdisplay-2.0\n"
+            "Successfully installed EasyProcess-0.3 pyvirtualdisplay-2.1\n"
           ],
           "name": "stdout"
         }
@@ -144,7 +201,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oJkvO43QMT3U",
-        "outputId": "9bd6d2b9-a04b-4815-9bcc-e333d863d6f4"
+        "outputId": "17897103-2319-4c2e-b78d-5a3a8542c5e2"
       },
       "source": [
         "env = gym.make('LunarLander-v2')\n",
@@ -152,7 +209,7 @@
         "print('State shape: ', env.observation_space.shape)\n",
         "print('Number of actions: ', env.action_space.n)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +238,7 @@
           "height": 248
         },
         "id": "QImO5DI0MT3U",
-        "outputId": "2cbe7e6c-2977-4b43-ddc2-46bd99af7a3b"
+        "outputId": "cb0182ef-456c-4e3a-b0ca-03540eadda46"
       },
       "source": [
         "from dqn_agent import Agent\n",
@@ -203,7 +260,7 @@
         "        \n",
         "env.close()"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -291,7 +348,7 @@
         "plt.xlabel('Episode #')\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +425,7 @@
         "            \n",
         "env.close()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
