--- a/notebooks/cem/Cross_Entroph_Method.ipynb
+++ b/notebooks/cem/Cross_Entroph_Method.ipynb
@@ -8,6 +8,7 @@
       "name": "Cross-Entroph Method.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +37,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fernandofsilva/Reinforcement_Learning/blob/main/notebooks/cem/Cross_Entroph_Method.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fernandofsilva/RL/blob/main/notebooks/cem/Cross_Entroph_Method.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -59,6 +60,59 @@
       },
       "source": [
         "### 1. Import the Necessary Packages"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "id": "BKBdrz-lqzbC",
+        "outputId": "8941bbf6-eaf2-4828-b20d-6c4f980b1772"
+      },
+      "source": [
+        "#@title Load custom imports and models\n",
+        "# Start a Git repository\n",
+        "!git init\n",
+        "\n",
+        "# Track repository, do not enter subdirectory\n",
+        "!git remote add -f origin https://github.com/fernandofsilva/RL\n",
+        "\n",
+        "# Enable the tree check feature\n",
+        "!git config core.sparseCheckout true\n",
+        "\n",
+        "# Create a file in the path: .git/info/sparse-checkout\n",
+        "# That is inside the hidden .git directory that was created\n",
+        "# by running the command: git init\n",
+        "# And inside it enter the name of the sub directory you only want to clone\n",
+        "!echo 'notebooks/cem' >> .git/info/sparse-checkout\n",
+        "\n",
+        "## Download with pull, not clone\n",
+        "!git pull origin main\n",
+        "\n",
+        "# Move files to root\n",
+        "!mv notebooks/cem/*.pth ."
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialized empty Git repository in /content/.git/\n",
+            "Updating origin\n",
+            "remote: Enumerating objects: 272, done.\u001b[K\n",
+            "remote: Total 272 (delta 0), reused 0 (delta 0), pack-reused 272\u001b[K\n",
+            "Receiving objects: 100% (272/272), 288.78 MiB | 48.64 MiB/s, done.\n",
+            "Resolving deltas: 100% (122/122), done.\n",
+            "From https://github.com/fernandofsilva/RL\n",
+            " * [new branch]      main       -> origin/main\n",
+            "From https://github.com/fernandofsilva/RL\n",
+            " * branch            main       -> FETCH_HEAD\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -95,7 +149,7 @@
         "\n",
         "plt.ion()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +269,7 @@
         "    \n",
         "agent = Agent(env).to(device)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +356,7 @@
         "plt.xlabel('Episode #')\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +445,7 @@
         "\n",
         "env.close()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
